--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 
 <h1>This is the screenshot with the join code</h1>
-<img src="img_girl.jpg" alt="Girl in a jacket">
+<img src="screenshot.jpg" alt="not working :(">
 <p>Will not work if the world is not up.</p>
 
 </body>
